--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -2,28 +2,258 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import os\n",
+    "from utils import col_names\n",
+    "\n",
+    "directory = 'data\\src'\n",
+    "paths=[]\n",
+    "for filename in os.listdir(directory):\n",
+    "    f = os.path.join(directory, filename).replace(\"\\\\\",\"/\")\n",
+    "\n",
+    "    paths.append(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<module 'pandas.api.types' from 'c:\\\\Users\\\\karol\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python310\\\\lib\\\\site-packages\\\\pandas\\\\api\\\\types\\\\__init__.py'>\n"
+      "data/src/s_d_100_2022.csv\n",
+      "data/src/s_d_105_2022.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>354150100</th>\n",
+       "      <th>KOŁOBRZEG-DŹWIRZYNO</th>\n",
+       "      <th>2022</th>\n",
+       "      <th>01</th>\n",
+       "      <th>01.1</th>\n",
+       "      <th>8.9</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>4.6</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>5.5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 55</th>\n",
+       "      <th>0.2</th>\n",
+       "      <th>Unnamed: 57</th>\n",
+       "      <th>R</th>\n",
+       "      <th>0.3</th>\n",
+       "      <th>9.17</th>\n",
+       "      <th>0.4</th>\n",
+       "      <th>9.18</th>\n",
+       "      <th>0.5</th>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>354150100</td>\n",
+       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>354150100</td>\n",
+       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>354150100</td>\n",
+       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>354150100</td>\n",
+       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Z</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>354150100</td>\n",
+       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 65 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   354150100  KOŁOBRZEG-DŹWIRZYNO  2022  01  01.1   8.9  Unnamed: 6  4.6  \\\n",
+       "0  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     2  10.9         NaN  5.8   \n",
+       "1  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     3  10.8         NaN  6.4   \n",
+       "2  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     4   7.0         NaN  5.9   \n",
+       "3  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     5   6.5         NaN  1.0   \n",
+       "4  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     6   3.9         NaN -0.5   \n",
+       "\n",
+       "   Unnamed: 8  5.5  ...  Unnamed: 55  0.2  Unnamed: 57  R  0.3 9.17  0.4  \\\n",
+       "0         NaN  9.4  ...          NaN    0          NaN  R    0  9.0    0   \n",
+       "1         NaN  7.4  ...          NaN    0          NaN  R    0  9.0    0   \n",
+       "2         NaN  6.0  ...          NaN    0          NaN  R    0  9.0    0   \n",
+       "3         NaN  2.3  ...          NaN    0          NaN  Z    6  NaN    0   \n",
+       "4         NaN  1.0  ...          NaN    0          NaN  R    6  NaN    4   \n",
+       "\n",
+       "   9.18  0.5  8  \n",
+       "0   9.0    0  8  \n",
+       "1   9.0    0  8  \n",
+       "2   9.0    0  8  \n",
+       "3   9.0    0  8  \n",
+       "4   NaN    0  8  \n",
+       "\n",
+       "[5 rows x 65 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for path in paths:\n",
+    "    print(path)\n",
+    "\n",
+    "df = pd.read_csv(paths[0], encoding=\"windows-1250\", sep=',', engine='c')\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2']\n"
      ]
     }
    ],
    "source": [
-    "print(pd.api.types)"
+    "print(col_names)"
    ]
   }
  ],
