--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -2,35 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from utils import col_names\n",
-    "\n",
-    "directory = 'data\\src'\n",
-    "paths=[]\n",
-    "for filename in os.listdir(directory):\n",
-    "    f = os.path.join(directory, filename).replace(\"\\\\\",\"/\")\n",
-    "\n",
-    "    paths.append(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data/src/s_d_100_2022.csv\n",
-      "data/src/s_d_105_2022.csv\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -52,32 +26,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>354150100</th>\n",
-       "      <th>KOŁOBRZEG-DŹWIRZYNO</th>\n",
-       "      <th>2022</th>\n",
-       "      <th>01</th>\n",
-       "      <th>01.1</th>\n",
-       "      <th>8.9</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>4.6</th>\n",
-       "      <th>Unnamed: 8</th>\n",
-       "      <th>5.5</th>\n",
+       "      <th>station_code</th>\n",
+       "      <th>station_name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>temp_max</th>\n",
+       "      <th>-</th>\n",
+       "      <th>temp_min</th>\n",
+       "      <th>-</th>\n",
+       "      <th>temp_av</th>\n",
        "      <th>...</th>\n",
-       "      <th>Unnamed: 55</th>\n",
-       "      <th>0.2</th>\n",
-       "      <th>Unnamed: 57</th>\n",
-       "      <th>R</th>\n",
-       "      <th>0.3</th>\n",
-       "      <th>9.17</th>\n",
-       "      <th>0.4</th>\n",
-       "      <th>9.18</th>\n",
-       "      <th>0.5</th>\n",
-       "      <th>8</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
+       "      <th>-</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>354150100</td>\n",
+       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>354150100</td>\n",
        "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
        "      <td>2022</td>\n",
@@ -101,7 +99,7 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>354150100</td>\n",
        "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
        "      <td>2022</td>\n",
@@ -125,7 +123,7 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>354150100</td>\n",
        "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
        "      <td>2022</td>\n",
@@ -149,7 +147,7 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>354150100</td>\n",
        "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
        "      <td>2022</td>\n",
@@ -173,82 +171,216 @@
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>354150100</td>\n",
-       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>349220690</td>\n",
+       "      <td>LESKO</td>\n",
        "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3.9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7.6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-0.5</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4.1</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>R</td>\n",
-       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>349220690</td>\n",
+       "      <td>LESKO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>28</td>\n",
+       "      <td>4.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4</td>\n",
+       "      <td>-1.1</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Z</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>349220690</td>\n",
+       "      <td>LESKO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>29</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Z</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>349220690</td>\n",
+       "      <td>LESKO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>349220690</td>\n",
+       "      <td>LESKO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>0</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 65 columns</p>\n",
+       "<p>21170 rows × 65 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   354150100  KOŁOBRZEG-DŹWIRZYNO  2022  01  01.1   8.9  Unnamed: 6  4.6  \\\n",
-       "0  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     2  10.9         NaN  5.8   \n",
-       "1  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     3  10.8         NaN  6.4   \n",
-       "2  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     4   7.0         NaN  5.9   \n",
-       "3  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     5   6.5         NaN  1.0   \n",
-       "4  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   1     6   3.9         NaN -0.5   \n",
+       "     station_code         station_name  year  month  day  temp_max   -  \\\n",
+       "0       354150100  KOŁOBRZEG-DŹWIRZYNO  2022      1    1       8.9 NaN   \n",
+       "1       354150100  KOŁOBRZEG-DŹWIRZYNO  2022      1    2      10.9 NaN   \n",
+       "2       354150100  KOŁOBRZEG-DŹWIRZYNO  2022      1    3      10.8 NaN   \n",
+       "3       354150100  KOŁOBRZEG-DŹWIRZYNO  2022      1    4       7.0 NaN   \n",
+       "4       354150100  KOŁOBRZEG-DŹWIRZYNO  2022      1    5       6.5 NaN   \n",
+       "..            ...                  ...   ...    ...  ...       ...  ..   \n",
+       "360     349220690                LESKO  2022     12   27       7.6 NaN   \n",
+       "361     349220690                LESKO  2022     12   28       4.1 NaN   \n",
+       "362     349220690                LESKO  2022     12   29       6.0 NaN   \n",
+       "363     349220690                LESKO  2022     12   30       7.7 NaN   \n",
+       "364     349220690                LESKO  2022     12   31       9.3 NaN   \n",
        "\n",
-       "   Unnamed: 8  5.5  ...  Unnamed: 55  0.2  Unnamed: 57  R  0.3 9.17  0.4  \\\n",
-       "0         NaN  9.4  ...          NaN    0          NaN  R    0  9.0    0   \n",
-       "1         NaN  7.4  ...          NaN    0          NaN  R    0  9.0    0   \n",
-       "2         NaN  6.0  ...          NaN    0          NaN  R    0  9.0    0   \n",
-       "3         NaN  2.3  ...          NaN    0          NaN  Z    6  NaN    0   \n",
-       "4         NaN  1.0  ...          NaN    0          NaN  R    6  NaN    4   \n",
+       "     temp_min   -  temp_av  ...   -  -    -  -  -    -  -    -  -  -  \n",
+       "0         4.6 NaN      5.5  ... NaN  0  NaN  R  0  9.0  0  9.0  0  8  \n",
+       "1         5.8 NaN      9.4  ... NaN  0  NaN  R  0  9.0  0  9.0  0  8  \n",
+       "2         6.4 NaN      7.4  ... NaN  0  NaN  R  0  9.0  0  9.0  0  8  \n",
+       "3         5.9 NaN      6.0  ... NaN  0  NaN  R  0  9.0  0  9.0  0  8  \n",
+       "4         1.0 NaN      2.3  ... NaN  0  NaN  Z  6  NaN  0  9.0  0  8  \n",
+       "..        ...  ..      ...  ...  .. ..  ... .. ..  ... ..  ... .. ..  \n",
+       "360       1.6 NaN      4.1  ... NaN  0  8.0  R  0  9.0  0  9.0  0  8  \n",
+       "361      -1.1 NaN      1.9  ... NaN  0  8.0  Z  7  NaN  0  9.0  0  8  \n",
+       "362       1.9 NaN      4.2  ... NaN  0  8.0  Z  9  NaN  0  9.0  0  8  \n",
+       "363       4.0 NaN      5.8  ... NaN  0  8.0  R  0  9.0  0  9.0  0  8  \n",
+       "364       4.9 NaN      7.9  ... NaN  0  8.0  R  0  9.0  0  9.0  0  8  \n",
        "\n",
-       "   9.18  0.5  8  \n",
-       "0   9.0    0  8  \n",
-       "1   9.0    0  8  \n",
-       "2   9.0    0  8  \n",
-       "3   9.0    0  8  \n",
-       "4   NaN    0  8  \n",
-       "\n",
-       "[5 rows x 65 columns]"
+       "[21170 rows x 65 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for path in paths:\n",
-    "    print(path)\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "from utils import col_names\n",
+    "from functions import calc_hot_days\n",
     "\n",
-    "df = pd.read_csv(paths[0], encoding=\"windows-1250\", sep=',', engine='c')\n",
-    "df.head(5)"
+    "directory = 'data\\src'\n",
+    "temp_threshold = 30\n",
+    "max_hot_days_streak=[]\n",
+    "for filename in os.listdir(directory):\n",
+    "    f = os.path.join(directory, filename).replace(\"\\\\\",\"/\")\n",
+    "    df = pd.read_csv(f, encoding=\"windows-1250\", sep=',', engine='c', header=None)\n",
+    "    max_hot_days_streak.append(calc_hot_days(df,temp_threshold))\n",
+    "\n",
+    "# df = df.rename({0:\"station_code\", 1:\"station_name\"}, axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '2']\n"
+      "['station_code', 'station_name', 'year', 'month', 'day', 'temp_max', '-', 'temp_min', '-', 'temp_av', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-', '-']\n"
      ]
     }
    ],
