--- a/test.ipynb
+++ b/test.ipynb
@@ -2,60 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "            0                    1     2   3   4     5   6     7   8     9   \\\n",
-      "138  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   5  19  27.9 NaN  13.1 NaN  20.7   \n",
-      "168  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   6  18  29.1 NaN  16.0 NaN  19.8   \n",
-      "174  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   6  24  29.8 NaN  13.1 NaN  22.6   \n",
-      "175  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   6  25  27.2 NaN  17.7 NaN  21.6   \n",
-      "176  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   6  26  27.7 NaN  19.3 NaN  23.0   \n",
-      "177  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   6  27  33.9 NaN  20.3 NaN  27.4   \n",
-      "178  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   6  28  29.6 NaN  17.6 NaN  18.8   \n",
-      "183  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   7   3  26.1 NaN  13.1 NaN  20.1   \n",
-      "200  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   7  20  25.7 NaN  14.9 NaN  21.4   \n",
-      "201  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   7  21  33.5 NaN  21.0 NaN  25.1   \n",
-      "205  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   7  25  31.2 NaN  15.9 NaN  23.8   \n",
-      "206  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   7  26  28.9 NaN  16.6 NaN  18.7   \n",
-      "214  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   8   3  28.2 NaN  16.3 NaN  22.5   \n",
-      "215  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   8   4  34.6 NaN  19.0 NaN  27.6   \n",
-      "216  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   8   5  31.2 NaN  18.5 NaN  21.8   \n",
-      "226  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   8  15  26.1 NaN  17.7 NaN  20.5   \n",
-      "227  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   8  16  25.1 NaN  17.5 NaN  21.5   \n",
-      "229  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   8  18  29.8 NaN  18.9 NaN  22.5   \n",
-      "230  354150100  KOŁOBRZEG-DŹWIRZYNO  2022   8  19  25.7 NaN  17.6 NaN  20.5   \n",
-      "\n",
-      "     ...  55  56   57  58  59   60  61   62  63  64  \n",
-      "138  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "168  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "174  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "175  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "176  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "177  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "178  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "183  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "200  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "201  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "205  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "206  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "214  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "215  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "216  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "226  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "227  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "229  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "230  ... NaN   0  8.0   R   0  9.0   0  9.0   0   8  \n",
-      "\n",
-      "[19 rows x 65 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -63,11 +12,41 @@
     "from functions import calc_hot_days\n",
     "\n",
     "directory = 'data\\src\\s_d_100_2022.csv'\n",
-    "temp_threshold = 25\n",
-    "df = pd.read_csv(directory, encoding=\"windows-1250\", sep=',', engine='c', header=None)\n",
+    "temp_threshold = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(directory, encoding=\"windows-1250\", sep=',', engine='c', header=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'dupa'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(directory, encoding\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mwindows-1250\u001b[39m\u001b[39m\"\u001b[39m, sep\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m, engine\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mc\u001b[39m\u001b[39m'\u001b[39m, header\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(calc_hot_days(df,temp_threshold))\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m((df[df[\u001b[39m5\u001b[39m]\u001b[39m>\u001b[39mtemp_threshold]))\n",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m, in \u001b[0;36mcalc_hot_days\u001b[1;34m(df, temp)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalc_hot_days\u001b[39m(df:pd\u001b[39m.\u001b[39mDataFrame,temp:\u001b[39mfloat\u001b[39m)\u001b[39m-\u001b[39m\u001b[39m>\u001b[39m\u001b[39mint\u001b[39m:\n\u001b[0;32m      2\u001b[0m     \u001b[39m# wyciagnac kolumne 'max temp'\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m     \u001b[39m# zrobic liste z zerami i jedynkami, w zaleznosci czy jest powyzej temp, czy nie\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m     df\u001b[39m.\u001b[39;49mdupa\n\u001b[0;32m      6\u001b[0m     \u001b[39m#zliczasz ilość 1 w serii\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \u001b[39m# [1,1,0,0,0,1,1,1,1,0]\u001b[39;00m\n\u001b[0;32m      8\u001b[0m     \u001b[39m# [1,2,0,0,0,1,2,3,4,0]\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \n\u001b[0;32m     10\u001b[0m     \u001b[39m#zwracasz największą liczbę z drugiej listy\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39m0\u001b[39m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\generic.py:5989\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5982\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   5983\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   5984\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   5985\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   5986\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5987\u001b[0m ):\n\u001b[0;32m   5988\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5989\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'dupa'"
+     ]
+    }
+   ],
+   "source": [
     "print(calc_hot_days(df,temp_threshold))\n",
     "\n",
-    "print((df[df[5]>temp_threshold]))\n"
+    "print((df[df[5]>temp_threshold]))"
    ]
   }
  ],
@@ -87,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
