readme update, results

--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -2,9 +2,460 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/src/s_d_100_2022.csv\n",
+      "data/src/s_d_105_2022.csv\n",
+      "data/src/s_d_115_2022.csv\n",
+      "data/src/s_d_120_2022.csv\n",
+      "data/src/s_d_125_2022.csv\n",
+      "data/src/s_d_135_2022.csv\n",
+      "data/src/s_d_155_2022.csv\n",
+      "data/src/s_d_160_2022.csv\n",
+      "data/src/s_d_185_2022.csv\n",
+      "data/src/s_d_195_2022.csv\n",
+      "data/src/s_d_200_2022.csv\n",
+      "data/src/s_d_205_2022.csv\n",
+      "data/src/s_d_210_2022.csv\n",
+      "data/src/s_d_230_2022.csv\n",
+      "data/src/s_d_235_2022.csv\n",
+      "data/src/s_d_250_2022.csv\n",
+      "data/src/s_d_270_2022.csv\n",
+      "data/src/s_d_272_2022.csv\n",
+      "data/src/s_d_280_2022.csv\n",
+      "data/src/s_d_295_2022.csv\n",
+      "data/src/s_d_300_2022.csv\n",
+      "data/src/s_d_310_2022.csv\n",
+      "data/src/s_d_330_2022.csv\n",
+      "data/src/s_d_360_2022.csv\n",
+      "data/src/s_d_375_2022.csv\n",
+      "data/src/s_d_385_2022.csv\n",
+      "data/src/s_d_399_2022.csv\n",
+      "data/src/s_d_400_2022.csv\n",
+      "data/src/s_d_415_2022.csv\n",
+      "data/src/s_d_418_2022.csv\n",
+      "data/src/s_d_424_2022.csv\n",
+      "data/src/s_d_435_2022.csv\n",
+      "data/src/s_d_455_2022.csv\n",
+      "data/src/s_d_465_2022.csv\n",
+      "data/src/s_d_469_2022.csv\n",
+      "data/src/s_d_488_2022.csv\n",
+      "data/src/s_d_495_2022.csv\n",
+      "data/src/s_d_497_2022.csv\n",
+      "data/src/s_d_500_2022.csv\n",
+      "data/src/s_d_510_2022.csv\n",
+      "data/src/s_d_520_2022.csv\n",
+      "data/src/s_d_530_2022.csv\n",
+      "data/src/s_d_540_2022.csv\n",
+      "data/src/s_d_550_2022.csv\n",
+      "data/src/s_d_560_2022.csv\n",
+      "data/src/s_d_566_2022.csv\n",
+      "data/src/s_d_570_2022.csv\n",
+      "data/src/s_d_575_2022.csv\n",
+      "data/src/s_d_580_2022.csv\n",
+      "data/src/s_d_585_2022.csv\n",
+      "data/src/s_d_595_2022.csv\n",
+      "data/src/s_d_600_2022.csv\n",
+      "data/src/s_d_625_2022.csv\n",
+      "data/src/s_d_628_2022.csv\n",
+      "data/src/s_d_650_2022.csv\n",
+      "data/src/s_d_660_2022.csv\n",
+      "data/src/s_d_670_2022.csv\n",
+      "data/src/s_d_690_2022.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>RZESZÓW-JASIONKA</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>POZNAŃ-ŁAWICA</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>KRAKÓW-BALICE</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>NOWY SĄCZ</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>TARNÓW</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>SANDOMIERZ</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>GORZÓW WIELKOPOLSKI</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>PIŁA</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>TORUŃ</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>SŁUBICE</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>KĘTRZYN</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>LEGNICA</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>KIELCE-SUKÓW</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>KOZIENICE</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>SIEDLCE</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>WŁODAWA</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>WARSZAWA-OKĘCIE</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>WROCŁAW-STRACHOWICE</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>OPOLE</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>OLSZTYN</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>MŁAWA</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CHOJNICE</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>RESKO-SMÓLSKO</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LĘBORK</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>MIKOŁAJKI</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>BIAŁYSTOK</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>WIELUŃ</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>CZĘSTOCHOWA</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>KATOWICE-MUCHOWIEC</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>KROSNO</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>LUBLIN-RADAWIEC</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>ŁÓDŹ-LUBLINEK</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>LESKO</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>ZAMOŚĆ</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KOSZALIN</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>SZCZECIN</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>TERESPOL</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>RACIBÓRZ</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>SULEJÓW</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>BIELSKO-BIAŁA</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>PŁOCK</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>SUWAŁKI</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>LESZNO</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>KALISZ</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>ZIELONA GÓRA</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ELBLĄG-MILEJEWO</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>KŁODZKO</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>JELENIA GÓRA</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ŚWINOUJŚCIE</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ŁEBA</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USTKA</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KOŁOBRZEG-DŹWIRZYNO</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>GDAŃSK-ŚWIBNO</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>ZAKOPANE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>HEL</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>ŚNIEŻKA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>HALA GĄSIENICOWA</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>KASPROWY WIERCH</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      0   1\n",
+       "48     RZESZÓW-JASIONKA  15\n",
+       "22        POZNAŃ-ŁAWICA  12\n",
+       "45        KRAKÓW-BALICE  12\n",
+       "55            NOWY SĄCZ  12\n",
+       "47               TARNÓW  12\n",
+       "49           SANDOMIERZ  12\n",
+       "20  GORZÓW WIELKOPOLSKI  11\n",
+       "13                 PIŁA  11\n",
+       "15                TORUŃ  10\n",
+       "21              SŁUBICE  10\n",
+       "8               KĘTRZYN  10\n",
+       "28              LEGNICA   9\n",
+       "46         KIELCE-SUKÓW   9\n",
+       "35            KOZIENICE   9\n",
+       "25              SIEDLCE   9\n",
+       "37              WŁODAWA   9\n",
+       "24      WARSZAWA-OKĘCIE   9\n",
+       "30  WROCŁAW-STRACHOWICE   9\n",
+       "41                OPOLE   9\n",
+       "17              OLSZTYN   9\n",
+       "16                MŁAWA   9\n",
+       "14             CHOJNICE   9\n",
+       "12        RESKO-SMÓLSKO   9\n",
+       "4                LĘBORK   9\n",
+       "18            MIKOŁAJKI   9\n",
+       "19            BIAŁYSTOK   8\n",
+       "32               WIELUŃ   8\n",
+       "43          CZĘSTOCHOWA   8\n",
+       "44   KATOWICE-MUCHOWIEC   8\n",
+       "56               KROSNO   8\n",
+       "36      LUBLIN-RADAWIEC   8\n",
+       "33        ŁÓDŹ-LUBLINEK   8\n",
+       "57                LESKO   8\n",
+       "50               ZAMOŚĆ   8\n",
+       "1              KOSZALIN   8\n",
+       "11             SZCZECIN   8\n",
+       "26             TERESPOL   8\n",
+       "42             RACIBÓRZ   8\n",
+       "34              SULEJÓW   7\n",
+       "51        BIELSKO-BIAŁA   7\n",
+       "23                PŁOCK   7\n",
+       "9               SUWAŁKI   7\n",
+       "29               LESZNO   6\n",
+       "31               KALISZ   6\n",
+       "27         ZIELONA GÓRA   6\n",
+       "7       ELBLĄG-MILEJEWO   6\n",
+       "40              KŁODZKO   5\n",
+       "38         JELENIA GÓRA   5\n",
+       "10          ŚWINOUJŚCIE   5\n",
+       "3                  ŁEBA   5\n",
+       "2                 USTKA   5\n",
+       "0   KOŁOBRZEG-DŹWIRZYNO   5\n",
+       "6         GDAŃSK-ŚWIBNO   4\n",
+       "52             ZAKOPANE   4\n",
+       "5                   HEL   3\n",
+       "39              ŚNIEŻKA   0\n",
+       "53     HALA GĄSIENICOWA   0\n",
+       "54      KASPROWY WIERCH   0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -12,14 +463,19 @@
     "from functions import calc_hot_days\n",
     "\n",
     "directory = 'data\\src'\n",
-    "temp_threshold = 30\n",
+    "temp_threshold = 27\n",
     "max_hot_days_streak=[]\n",
+    "\n",
     "for filename in os.listdir(directory):\n",
     "    f = os.path.join(directory, filename).replace(\"\\\\\",\"/\")\n",
-    "    df = pd.read_csv(f, encoding=\"windows-1250\", sep=',', engine='c', header=None)\n",
-    "    max_hot_days_streak.append(calc_hot_days(df,temp_threshold))\n",
+    "    print(f)\n",
+    "    df = pd.read_csv(f, encoding=\"windows-1250\", sep=',', header=None)\n",
+    "    df.columns = col_names\n",
+    "    max_hot_days_streak.append([df.station_name[0], calc_hot_days(df,temp_threshold)])\n",
     "\n",
-    "# df = df.rename({0:\"station_code\", 1:\"station_name\"}, axis=1)\n"
+    "# df = df.rename({0:\"station_code\", 1:\"station_name\"}, axis=1)\n",
+    "df_results = pd.DataFrame(max_hot_days_streak).sort_values(1,ascending=False)\n",
+    "df_results\n"
    ]
   },
   {
